[tool.poetry]
name = "open-meteo-solar-forecast"
version = "0.1.21"
description = "Asynchronous Python client for getting forecast solar information"
authors = ["Rany <rany@riseup.net>", "Klaas Schoute <hello@student-techlife.com>"]
maintainers = ["Rany <rany@riseup.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rany2/open-meteo-solar-forecast"
repository = "https://github.com/rany2/open-meteo-solar-forecast"
documentation = "https://github.com/rany2/open-meteo-solar-forecast"
keywords = ["forecast", "solar", "power", "energy", "api", "async", "client"]
classifiers = [
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "open_meteo_solar_forecast", from = "src" },
]

[tool.poetry.dependencies]
aiohttp = ">=3.0.0"
python = "^3.11"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/rany2/open-meteo-solar-forecast/issues"
Changelog = "https://github.com/rany2/open-meteo-solar-forecast/releases"

[tool.poetry.group.dev.dependencies]
aresponses = "3.0.0"
covdefaults = "2.3.0"
mypy = "1.10.0"
ruff = "0.4.2"
syrupy = "4.6.1"
yamllint = "1.35.1"

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
platform = "linux"
python_version = "3.11"

# flake8-mypy expects the two following for sensible formatting
show_column_numbers = true

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py311"
lint.select = ["ALL"]
lint.ignore = [
  "ANN101",  # Self... explanatory
  "ANN102",  # cls... just as useless
  "ANN401",  # Opinioated warning on disallowing dynamically typed expressions
  "D203",    # Conflicts with other rules
  "D213",    # Conflicts with other rules
  "D417",    # False positives in some occasions
  "EM101",   # Allow exceptions with string literials
  "PLR2004", # Just annoying, not really useful
  "SLOT000", # Has a bug with enums: https://github.com/astral-sh/ruff/issues/5748
  "TRY003",  # Allow long message outside exception class

  # Conflicts with the Ruff formatter
  "COM812",
  "ISC001",
]

[tool.ruff.lint.isort]
known-first-party = ["open_meteo_solar_forecast"]

[tool.ruff.lint.mccabe]
max-complexity = 25

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
